--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "babel": "^6.23.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.3.4"
   },
   "devDependencies": {
@@ -18,10 +20,13 @@
     "@babel/preset-env": "^7.11.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-typescript": "^4.5.8",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "typescript": "^4.0.5",
+    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
