Import SVG for infantry counters.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NextWar",
+  "name": "next_war",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "core-js": "^3.6.5",
     "node-sass": "^5.0.0",
     "sass": "^1.32.12",
-    "sass-loader": "^11.0.1",
+    "sass-loader": "^10",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
