--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "node-sass": "^5.0.0",
+    "pinia": "^2.0.10",
     "sass": "^1.32.12",
     "sass-loader": "^10",
     "vue": "^3.0.0",
@@ -36,7 +37,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
-    "typescript": "~4.1.5",
-    "vue-jest": "^5.0.0-0"
+    "typescript": "~4.5.5",
+    "vue-jest": "^3.0.7"
   }
 }
